content/terraform/v1.15.x/docs/cli/commands/stacks/index.mdx
---
page_title: terraform stacks command
description: The terraform stacks command manages Terraform Stacks configurations and deployments.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-29T13:15:03Z
last_modified: 2026-05-14T19:29:23.000Z
# END AUTO GENERATED METADATA
---

# `terraform stacks` reference

Use `terraform stacks` commands to manage Terraform Stack configurations, deployments, and the lifecycle of a Stack.

## Description

The `terraform stacks` command lets you manage Terraform Stacks. Use the following commands to initialize configurations, validate Stack definitions, create and manage Stacks, and handle deployment operations.

<EnterpriseAlert>

To use CLI commands with Stacks on Terraform Enterprise, set the `TF_STACKS_HOSTNAME` environment variable to your Terraform Enterprise instance's hostname.

</EnterpriseAlert>

## Commands

- [`init`](/terraform/cli/commands/stacks/init) - Initialize the Stack and prepare the configuration directory for further commands.
- [`validate`](/terraform/cli/commands/stacks/validate) - Checks whether the local component and deployment configurations are valid.
- [`create`](/terraform/cli/commands/stacks/create) - Create a Stack in HCP Terraform.
- [`list`](/terraform/cli/commands/stacks/list) - List Stacks for a given organization or project.
- [`diagnostics`](/terraform/cli/commands/stacks/diagnostics) - Retrieve warnings and errors for a stack configuration or deployment step.
- [`version`](/terraform/cli/commands/stacks/version) - Show the current Stacks plugin version.
- [`providers-lock`](/terraform/cli/commands/stacks/providers-lock) - Write out dependency locks for the providers your Stack configures.
- [`fmt`](/terraform/cli/commands/stacks/fmt) - Reformat your component configuration and deployment configuration to a canonical format.

## Subcommands

- [`deployment-run`](/terraform/cli/commands/stacks/deployment-run) - Manage deployment runs for a Stack deployment.
- [`deployment-group`](/terraform/cli/commands/stacks/deployment-group) - Manage deployment groups.
- [`configuration`](/terraform/cli/commands/stacks/configuration) - Manage Stack configuration versions.
- [`migrate`](/terraform/cli/commands/stacks/migrate) - Migrate traditional Terraform workflows to Terraform Stacks.

## Global flags

Refer to [Global flags reference](/terraform/cli/commands/stacks/global-flags) for information about flags you can use with all commands.
